--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <!-- Header Section -->
     <header class="min-h-screen flex flex-col justify-center items-center bg-cover bg-center"
         style="background-image: url('https://source.unsplash.com/1600x900/?technology');">
-        <h1 class="text-4xl text-teal-500  md:text-6xl font-bold typing fade-in-up">
+        <h1 class="text-4xl text-teal-500 ml-2 mr-2  md:text-6xl font-bold typing fade-in-up">
             Hi, I'm Sandeep - MERN Stack Developer
         </h1>
-        <p class="mt-4 text-xl md:text-2xl fade-in-up" style="animation-delay: 0.5s;">
+        <p class="mt-4 text-xl md:text-2xl fade-in-up ml-2 mr-2" style="animation-delay: 0.5s;">
             Results-oriented MERN/React.js developer with 3 years of experience.
         </p>
         <div class="mt-8 space-x-4 fade-in-up" style="animation-delay: 1s;">
