--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             Hi, I'm Sandeep - MERN Stack Developer
         </h1>
         <p class="mt-4 text-xl md:text-2xl fade-in-up ml-2 mr-2" style="animation-delay: 0.5s;">
-            &nbsp; Results-oriented MER/React.js developer with &nbsp; 3 years of experience.
+            &nbsp; Results-oriented MERN/React.js developer with &nbsp; 3 years of experience.
         </p>
         <div class="mt-8 space-x-4 fade-in-up" style="animation-delay: 1s;">
             <!-- LinkedIn Button with Emoji -->
