--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </p>
         <div class="mt-8 space-x-4 fade-in-up" style="animation-delay: 1s;">
             <!-- LinkedIn Button with Emoji -->
-             <div>
+             <div class="m-2">
                 <a href="https://www.linkedin.com/in/sandeep-gunde-2552a4211/" target="_blank"
                 class="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-500 transition ease-in-out">
                 <span class="mr-2">🔗</span> LinkedIn
